--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,226 @@
-.O--inspect,
-.O--error {
-  margin: 20px -20px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 0 17px;
-  border-left: solid 3px #ccc;
+:root {
+  --syntax_normal: #1b1e23;
+  --syntax_comment: #a9b0bc;
+  --syntax_number: #20a5ba;
+  --syntax_keyword: #c30771;
+  --syntax_atom: #10a778;
+  --syntax_string: #008ec4;
+  --syntax_error: #ffbedc;
+  --syntax_unknown_variable: #838383;
+  --syntax_known_variable: #005f87;
+  --syntax_matchbracket: #20bbfc;
+  --syntax_key: #6636b4;
+  --selection: #d7d4f0;
+  --mono_fonts: 14px/1.5 Menlo, Consolas, monospace;
 }
 
-.O--inspect,
-.O--error,
-.O--text {
-  font: 16px/24px Menlo, monospace;
-  white-space: pre;
+
+.observable {
+  font: 17px/1.5 "Iowan Old Style", "Apple Garamond", Baskerville,
+    "Palatino Linotype",
+    "Times New Roman", "Droid Serif", Times, "Source Serif Pro", serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  color: #1b1e23;
 }
 
-.O pre,
-.O code,
-.O tt {
-  font: 16px/24px Menlo, monospace;
+.observable h1,
+.observable h2,
+.observable h3,
+.observable h4,
+.observable h5,
+.observable h6 {
+  color: #333;
+  font-family: "Roboto Condensed", sans-serif;
+  font-weight: 700;
+  line-height: 1.15;
+  margin: 0;
 }
 
-.O--expanded,
-.O--collapsed,
-.O--function,
-.O--string:before,
-.O--string:after,
-.O--gray {
-  color: #636363;
+.observable h2 ~ p,
+.observable h3 ~ p,
+.observable h4 ~ p {
+  margin-top: 0;
 }
 
-.O--collapsed,
-.O--inspect a {
+.observable a[href] {
+  text-decoration: none;
+}
+
+.observable a[href]:hover {
+  text-decoration: underline;
+}
+
+.observable h1 code,
+.observable h2 code,
+.observable h3 code,
+.observable h4 code,
+.observable h5 code,
+.observable h6 code {
+  font-size: 90%;
+}
+
+.observable pre,
+.observable code,
+.observable tt {
+  font: var(--mono_fonts);
+}
+
+.observable img {
+  max-width: calc(100vw - 28px);
+}
+
+.observable p,
+.observable .katex-display {
+  max-width: 640px;
+}
+
+.observable blockquote,
+.observable ol,
+.observable ul {
+  max-width: 600px;
+}
+
+.observable hr {
+  height: 1px;
+  margin: 1em 0;
+  padding: 1em 0;
+  border: none;
+  background: no-repeat center/100% 1px linear-gradient(to right,rgba(0,0,0,.05),rgba(0,0,0,.05));
+}
+
+.observable pre {
+  padding: 2px 0;
+}
+
+.observable input:not([type]),
+.observable input[type=email],
+.observable input[type=number],
+.observable input[type=password],
+.observable input[type=range],
+.observable input[type=search],
+.observable input[type=tel],
+.observable input[type=text],
+.observable input[type=url] {
+  width: 320px;
+}
+
+.observable input,
+.observable canvas {
+  vertical-align: middle;
+}
+
+.observable table {
+  width: 100%;
+  max-width: 640px;
+  border-collapse: collapse;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  font-size: 14px;
+}
+
+.observable th {
+  text-align: left;
+}
+
+.observable tr:not(:last-child) {
+  border-bottom: solid 1px #eee;
+}
+
+.observable thead tr {
+  border-bottom: solid 1px #ccc;
+}
+
+.observable--expanded,
+.observable--collapsed,
+.observable--function,
+.observable--import,
+.observable--string:before,
+.observable--string:after,
+.observable--gray {
+  color: var(--syntax_normal);
+}
+
+.observable--collapsed,
+.observable--inspect a {
   cursor: pointer;
 }
 
-.O--field {
+.observable--field {
   text-indent: -1em;
   margin-left: 1em;
 }
 
-.O--index,
-.O--blue {
+.observable--empty {
+  color: var(--syntax_comment);
+}
+
+.observable a[href],
+.observable--keyword,
+.observable--blue {
   color: #3182bd;
 }
 
-.O--pink {
+.observable--forbidden,
+.observable--pink {
   color: #e377c2;
 }
 
-.O--orange {
+.observable--orange {
   color: #e6550d;
 }
 
-.O--null,
-.O--undefined,
-.O--number,
-.O--date,
-.O--boolean,
-.O--green {
-  color: #31a354;
+.observable--null,
+.observable--undefined,
+.observable--boolean {
+  color: var(--syntax_atom);
 }
 
-.O--key,
-.O--string,
-.O--purple {
-  color: #756bb1;
+.observable--number,
+.observable--date,
+.observable--regexp,
+.observable--symbol,
+.observable--green {
+  color: var(--syntax_number);
 }
 
-.O--string:before,
-.O--string:after {
-  content: "\"";
+.observable--index,
+.observable--key {
+  color: var(--syntax_key);
 }
 
-.O--error,
-.O--red {
-  color: #de2d26;
+.observable--empty {
+  font-style: oblique;
 }
 
-.O--error {
-  border-left-color: #de2d26;
+.observable--string,
+.observable--purple {
+  color: var(--syntax_string);
 }
 
-.O input {
-  min-width: 320px;
+.observable--error,
+.observable--red {
+  color: #e7040f;
 }
 
-.O input[type=range] {
-  position: relative;
-  top: 3px;
+.observable--inspect {
+  font: var(--mono_fonts);
+  overflow-x: auto;
+  display: block;
+  padding: 6px 0;
+  white-space: pre;
 }
 
-.O canvas {
-  position: relative;
-  top: 1px;
+.observable--error {
+  border-left-color: #e7040f;
+}
+
+.observable--error .observable--inspect {
+  word-break: break-all;
+  white-space: pre-wrap;
+}
+
+.observable--running,
+.observable--changed {
+  border-left-color: hsl(217, 13%, 70%);
 }
