Permit prototype inspection

--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,10 @@
   color: var(--syntax_key);
 }
 
+.observablehq--prototype-key {
+  color: #aaa;
+}
+
 .observablehq--empty {
   font-style: oblique;
 }
